# reqres-ibs

./: .gitignore  pyproject.toml
tests/: conftest.py  test_api.py  test_web.py
